Changed location of some icons

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                         <li>Services</li>   
                     </ul>
                 </div>
-                <button id="nav_button">Contact us <img src="./white right icon.svg"></button>
+                <button id="nav_button">Contact us <img src="./icons/white right icon.svg"></button>
             </div>
         </nav>
         <section id="hero">
             <div id="hero_content">
                 <div class="hero_text_content">
-                    <h1>Global Brandmakers making <span id="hero_span">Waves<img src="./Waves (1).svg"></span></h1>
+                    <h1>Global Brandmakers making <span id="hero_span">Waves<img src="./icons/Waves (1).svg"></span></h1>
                 </div>
                 <div class="hero_buttons">
-                    <button class="primary">Explore our services<img src="./white right icon.svg"></button>
-                    <button class="secondary"><img src="./Play icon (1).svg">Explore our services</button>
+                    <button class="primary">Explore our services<img src="./icons/white right icon.svg"></button>
+                    <button class="secondary"><img src="./icons/Play icon (1).svg">Explore our services</button>
 
                 </div>
             </div>
@@ -65,25 +65,25 @@
                             <img class="service_img" src="./icons/service_1.svg">
                             <h4 class="service_title">Strategy services</h4>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis luctus lacus. Nunc porta ipsum et tempor euismod. </p>
-                            <button class="service_card_button">Learn More <img src="./Waves (1).svg"></button>
+                            <button class="service_card_button">Learn More <img src="./icons/Waves (1).svg"></button>
                         </div>
                         <div class="service_card two">
                             <img class="service_img" src="./icons/service_2.svg">
                             <h4 class="service_title">Marketing services</h4>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis luctus lacus. Nunc porta ipsum et tempor euismod. </p>
-                            <button class="service_card_button">Learn More <img src="./Waves (1).svg"></button>
+                            <button class="service_card_button">Learn More <img src="./icons/Waves (1).svg"></button>
                         </div>
                         <div class="service_card three">
                             <img class="service_img" src="./icons/service_3.svg">
                             <h4 class="service_title">Design services</h4>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis luctus lacus. Nunc porta ipsum et tempor euismod. </p>
-                            <button class="service_card_button">Learn More <img src="./Waves (1).svg"></button>
+                            <button class="service_card_button">Learn More <img src="./icons/Waves (1).svg"></button>
                         </div>
                         <div class="service_card four">
                             <img class="service_img" src="./icons/service_4.svg">
                             <h4 class="service_title">Development services</h4>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis luctus lacus. Nunc porta ipsum et tempor euismod. </p>
-                            <button class="service_card_button">Learn More <img src="./Waves (1).svg"></button>
+                            <button class="service_card_button">Learn More <img src="./icons/Waves (1).svg"></button>
                         </div>
                 </div>
                 <button class="service_button">Explore all services <img src="./icons/purple_left_arrow.svg"></button>
@@ -93,7 +93,7 @@
             <div id="work_content">
                 <div class="work_text_content">
                     <h5>PROJECTS</h5>
-                    <h3>We guide game-changing companies, across platforms & places, through agile design & digital experience. We make <span id="work_span">waves<img src="./Waves (1).svg"></span></h3>
+                    <h3>We guide game-changing companies, across platforms & places, through agile design & digital experience. We make <span id="work_span">waves<img src="./icons/Waves (1).svg"></span></h3>
                 </div>
                 <div class="work_cards">
                     <div class="work_card" id="work_card_1">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="work_button">Explore all projects <img src="./white right icon.svg"></button>
+                <button id="work_button">Explore all projects <img src="./icons/white right icon.svg"></button>
             </div>
         </section>
         <section id="customers">
