--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div id="logo">Waves</div>
                 <div class="nav_items">
                     <ul>
-                        <li id="active">Home</li>
-                        <li>About us</li>
-                        <li>Blog</li>
-                        <li>Services</li>   
+                        <a href=""><li id="active">Home</li></a>
+                        <a href=""><li>About us</li></a>
+                        <a href=""><li>Blog</li></a>
+                        <a href=""><li>Services</li></a>   
                     </ul>
                 </div>
                 <button id="nav_button">Contact us <img src="./icons/white right icon.svg"></button>
